# yadc

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-BSD  LICENSE-MIT  README.md
yadc/: Cargo.toml
yadc-codegen/: Cargo.toml  README.md  si.toml  ucum.toml
yadc-codegen/src/: codegen.rs  main.rs  model.rs
yadc-codegen/src/ucum/: convert.rs  mod.rs  parse.rs  resolve.rs
yadc-derive/: Cargo.toml  README.md
yadc-derive/src/: lib.rs
yadc-si/: Cargo.toml  README.md
yadc-si/src/: angular.rs  chemistry.rs  density.rs  dimensionless.rs  electromagnetic.rs  fluid.rs  information.rs  lib.rs  mechanical.rs  photometric.rs  thermal.rs  uom_bridge.rs
yadc-si/tests/: integration.rs  uom_bridge.rs
yadc/examples/: basic_use.rs  custom_value_type.rs  define_unit_system.rs  generic_fns.rs  serde_demo.rs  uom.rs
yadc/src/: lib.rs  traits.rs
