[package]
name = "yadc"
version = "0.1.0"
edition = "2024"
license = "MIT OR BSD-3-Clause"

[dependencies]
yadc-derive = { path = "../yadc-derive" }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uom = "0.38.0"
yadc-si = { path = "../yadc-si", features = ["serde", "uom"] }
